--- a/src/App.css
+++ b/src/App.css
@@ -98,339 +98,162 @@
 .delete:hover {
   color: red;
 }
-.socket {
-  width: 200px;
-  height: 200px;
+.loader {
+  display: flex;
+  align-items: center;
   position: absolute;
-  right: 10%;
-  margin-left: -100px;
+  right: 20%;
   top: 30%;
-  margin-top: -100px;
 }
-
-.hex-brick {
-  background: #000000;
-  width: 30px;
-  height: 17px;
+.load{
   position: absolute;
-  top: 5px;
-  animation-name: fade00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: fade00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
+  content: "";
+  margin-right: 1em;
+  height: 1.2em;
+  width: 1.2em;
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0);
+  box-shadow: 0 1px 7px rgba(0,0,0,0.3);
 }
 
-.h2 {
-  transform: rotate(60deg);
-  -webkit-transform: rotate(60deg);
+.load2 {
+  animation: 1s flow2 infinite;
+}
+.load3 {
+  animation: 1s flow3 infinite;
+}
+.load4 {
+  animation: 1s flow4 infinite;
+}
+.load5 {
+  animation: 1s flow5 infinite;
 }
 
-.h3 {
-  transform: rotate(-60deg);
-  -webkit-transform: rotate(-60deg);
+.load6 {
+  animation: 6s flow6 infinite;
 }
 
-.gel {
-  height: 30px;
-  width: 30px;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+.load7 {
+  animation: 6s flow7 infinite;
 }
 
-.center-gel {
-  margin-left: -15px;
-  margin-top: -15px;
-  animation-name: pulse00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: pulse00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
+.load8 {
+  animation: 6s flow8 infinite;
 }
 
-.c1 {
-  margin-left: -47px;
-  margin-top: -15px;
+.load9 {
+  animation: 6s flow9 infinite;
 }
-
-.c2 {
-  margin-left: -31px;
-  margin-top: -43px;
+.dele{
+  animation-delay: 1s;
 }
-
-.c3 {
-  margin-left: 1px;
-  margin-top: -43px;
+.dele2{
+  animation-delay: 2s;
 }
-
-.c4 {
-  margin-left: 17px;
-  margin-top: -15px;
-}
-
-.c5 {
-  margin-left: -31px;
-  margin-top: 13px;
-}
-
-.c6 {
-  margin-left: 1px;
-  margin-top: 13px;
-}
-
-.c7 {
-  margin-left: -63px;
-  margin-top: -43px;
-}
-
-.c8 {
-  margin-left: 33px;
-  margin-top: -43px;
-}
-
-.c9 {
-  margin-left: -15px;
-  margin-top: 41px;
-}
-
-.c10 {
-  margin-left: -63px;
-  margin-top: 13px;
-}
-
-.c11 {
-  margin-left: 33px;
-  margin-top: 13px;
-}
-
-.c12 {
-  margin-left: -15px;
-  margin-top: -71px;
-}
-
-.c13 {
-  margin-left: -47px;
-  margin-top: -71px;
-}
-
-.c14 {
-  margin-left: 17px;
-  margin-top: -71px;
-}
-
-.c15 {
-  margin-left: -47px;
-  margin-top: 41px;
-}
-
-.c16 {
-  margin-left: 17px;
-  margin-top: 41px;
-}
-
-.c17 {
-  margin-left: -79px;
-  margin-top: -15px;
-}
-
-.c18 {
-  margin-left: 49px;
-  margin-top: -15px;
-}
-
-.c19 {
-  margin-left: -63px;
-  margin-top: -99px;
-}
-
-.c20 {
-  margin-left: 33px;
-  margin-top: -99px;
-}
-
-.c21 {
-  margin-left: 1px;
-  margin-top: -99px;
-}
-
-.c22 {
-  margin-left: -31px;
-  margin-top: -99px;
-}
-
-.c23 {
-  margin-left: -63px;
-  margin-top: 69px;
-}
-
-.c24 {
-  margin-left: 33px;
-  margin-top: 69px;
-}
-
-.c25 {
-  margin-left: 1px;
-  margin-top: 69px;
-}
-
-.c26 {
-  margin-left: -31px;
-  margin-top: 69px;
-}
-
-.c27 {
-  margin-left: -79px;
-  margin-top: -15px;
-}
-
-.c28 {
-  margin-left: -95px;
-  margin-top: -43px;
-}
-
-.c29 {
-  margin-left: -95px;
-  margin-top: 13px;
-}
-
-.c30 {
-  margin-left: 49px;
-  margin-top: 41px;
-}
-
-.c31 {
-  margin-left: -79px;
-  margin-top: -71px;
-}
-
-.c32 {
-  margin-left: -111px;
-  margin-top: -15px;
-}
-
-.c33 {
-  margin-left: 65px;
-  margin-top: -43px;
-}
-
-.c34 {
-  margin-left: 65px;
-  margin-top: 13px;
-}
-
-.c35 {
-  margin-left: -79px;
-  margin-top: 41px;
-}
-
-.c36 {
-  margin-left: 49px;
-  margin-top: -71px;
-}
-
-.c37 {
-  margin-left: 81px;
-  margin-top: -15px;
-}
-
-.r1 {
-  animation-name: pulse00;
-  animation-duration: 10s;
-  animation-iteration-count: infinite;
-  animation-delay: .2s;
-  -webkit-animation-name: pulse00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .2s;
-}
-
-.r2 {
-  animation-name: pulse00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-delay: .4s;
-  -webkit-animation-name: pulse00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .4s;
-}
-
-.r3 {
-  animation-name: pulse00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-delay: .6s;
-  -webkit-animation-name: pulse00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .6s;
-}
-
-.r1 > .hex-brick {
-  animation-name: fade00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-delay: .2s;
-  -webkit-animation-name: fade00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .2s;
-}
-
-.r2 > .hex-brick {
-  animation-name: fade00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-delay: .4s;
-  -webkit-animation-name: fade00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .4s;
-}
-
-.r3 > .hex-brick {
-  animation-name: fade00;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-delay: .6s;
-  -webkit-animation-name: fade00;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-delay: .6s;
-}
-
-@keyframes pulse00 {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-
+@keyframes flow2 {
   50% {
-    -webkit-transform: scale(0.01);
-    transform: scale(0.01);
+    transform: translateX(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
   }
 
   100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+    transform: translateX(0em);
   }
 }
 
-@keyframes fade00 {
-  0% {
-    background: #252525;
-  }
-
+@keyframes flow3 {
   50% {
-    background: #000000;
+    transform: translateX(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
   }
 
   100% {
-    background: #353535;
+    transform: translateX(0em);
+  }
+}
+
+@keyframes flow4 {
+  50% {
+    transform: translateY(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateY(0em);
+  }
+}
+
+@keyframes flow5 {
+  50% {
+    transform: translateY(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateY(0em);
+  }
+}
+
+@keyframes flow6 {
+  30% {
+    transform: translateX(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  60% {
+    transform: translateX(3em) translateY(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateX(0em) translateY(0em);
+  }
+}
+
+@keyframes flow7 {
+  30% {
+    transform: translateX(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  60% {
+    transform: translateX(-3em) translateY(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateX(0em) translateY(0em);
+  }
+}
+
+@keyframes flow8 {
+  30% {
+    transform: translateY(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  60% {
+    transform: translateY(3em) translateX(3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateX(0em) translateY(0em);
+  }
+}
+
+@keyframes flow9 {
+  30% {
+    transform: translateY(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  60% {
+    transform: translateY(-3em) translateX(-3em);
+    box-shadow: 0 1px 7px rgba(0,0,0,0.3);
+  }
+
+  100% {
+    transform: translateX(0em) translateY(0em);
   }
 }
