--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -169,3 +169,11 @@
   flex-direction: column;
   align-items: flex-start;
 }
+@media screen and (max-width: 768px) {
+  .nav{
+    padding: 1vmax 2vmax;
+  }
+  .right h5{
+    display: none;
+  }
+}
