--- a/src/components/TrendingSection/Trending.module.css
+++ b/src/components/TrendingSection/Trending.module.css
@@ -5,7 +5,7 @@
 .title {
   display: flex;
   align-items: center;
-  width: 12vw;
+  width: 15vmax;
   justify-content: space-around;
   padding: 1.5vw 0;
   /* background-color: red; */
@@ -17,29 +17,22 @@
   flex-wrap: wrap;
 }
 .card {
-  max-width: 24vw;
+  max-width: 24vmax;
   /* background-color: purple; */
   display: flex;
   justify-content: space-between;
-  max-height:10vw ;
 }
 .card > h6 {
-  width: 6vw;
-  height: 3vw;
-  margin-top: 0%;
-  font-size: 1.4vw;
+  font-size: 1.4vmax;
   opacity: 0.9;
   color: grey;
 }
-
 .dp {
-  height: 2vw;
   display: flex;
   align-items: center;
-
 }
 .dp>img{
-    height: 1.8vw;
+    height: 1.8vmax;
     border-radius: 50%;
     margin-right: 0.5vw;
 }
@@ -47,8 +40,10 @@
     margin-left: 0.7vw;
 }
 .rig > h4 {
-  margin-top: 0.4vw;
+  padding: 0.6vmax 0;
+  font-size: 1.3vmax;
 }
 .rig > h5 {
   margin-top: -0.3vw;
+  font-size: 1.2vmax;
 }
