--- a/src/components/TrendingSection/Trending.module.css
+++ b/src/components/TrendingSection/Trending.module.css
@@ -47,3 +47,14 @@
   margin-top: -0.3vw;
   font-size: 1.2vmax;
 }
+@media screen and (max-width: 768px) {
+  .card{
+    max-width: unset;
+  }
+  .title{
+    width: unset;
+    justify-content: unset;
+    font-size: 2.5vmax;
+  }
+  
+}
