--- a/src/components/Profile/Dashboard/Dashboard.module.css
+++ b/src/components/Profile/Dashboard/Dashboard.module.css
@@ -3,10 +3,10 @@
   display: flex;
 }
 .left {
-  width: 70vmax;
-  height: 45vmax;
+  width: 160vh;
+  height: 92vh;
+  overflow-y: auto;
   padding: 3vmax 10vmax;
-  border-right: 1px solid rgb(219, 219, 219);
 }
 .top {
   display: flex;
@@ -66,6 +66,10 @@
   padding: 2vmax 0;
   gap: 1vmax;
 }
+.lists_card h1{
+  font-size: 2.5vmax;
+  font-weight: 800;
+}
 .share_buttons{
   display: flex;
   align-items: center;
@@ -106,19 +110,20 @@
   width: 24%;
 }
 
-/* right section */
+/*  ---------------------------------------------- RIGHT SECTION ------------------------------------------------------------*/
 .right {
   width: 30vmax;
-  height: 45vmax;
-  padding: 2vh 3vh;
+  height: 90vh;
+  padding: 4vh 3vmax;
   display: flex;
   flex-direction: column;
   gap: 2.5vh;
+  border-left: 1px solid rgb(219, 219, 219);
 }
 
 .avatar {
-  width: 5vmax;
-  height: 5vmax;
+  width: 7vmax;
+  height: 7vmax;
   margin: left;
 }
 .avatar > img {
@@ -138,7 +143,21 @@
   font-size: 2vmax;
 }
 .by_who > img {
-  height: 4vw;
+  height: 3vmax;
   margin-right: 0.5vmax;
   border-radius: 100%;
+}
+
+/*  ---------------------------------------------- RESPONSIVE SECTION ------------------------------------------------------------*/
+@media screen and (max-width: 768px) {
+  .right{
+    display: none;
+  }
+  .left{
+    width: 100%;
+    padding: 3vmax 5vmax;
+  }
+  .left h1{
+    font-size: 2.5vmax;
+  }
 }
