--- a/src/components/Profile/Dashboard/Dashboard.module.css
+++ b/src/components/Profile/Dashboard/Dashboard.module.css
@@ -117,6 +117,7 @@
   padding: 4vh 3vmax;
   display: flex;
   flex-direction: column;
+  align-items: baseline;
   gap: 2.5vh;
   border-left: 1px solid rgb(219, 219, 219);
 }
@@ -132,9 +133,6 @@
   object-fit: cover;
   border-radius: 50%;
 }
-.right > h5 {
-  color: green;
-}
 
 .by_who {
   display: flex;
@@ -147,7 +145,19 @@
   margin-right: 0.5vmax;
   border-radius: 100%;
 }
-
+.followbtn,.unfollowbtn{
+  background-color: #ffc017;
+  border: none;
+  border-radius: 50px;
+  padding: 0.5vmax 1vmax;
+  font-size: 1.2vmax;
+  font-weight: 500;
+  cursor: pointer;
+}
+.unfollowbtn{
+  background-color: #e4e4e4;
+  color: black;
+}
 /*  ---------------------------------------------- RESPONSIVE SECTION ------------------------------------------------------------*/
 @media screen and (max-width: 768px) {
   .right{
